Revert "fix for click event not working on iphone"
This reverts commit 288fa2e35cb3b140e021836b1232b0583a618e94.

--- a/style.css
+++ b/style.css
@@ -51,7 +51,6 @@ header {
 .square {
     background-color: teal;
     color: white;
-    cursor: pointer;
     font-size: 120px;
     height: 200px;
     line-height: 200px;
